2011-03-26  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-http-get-list-sentinel-base): New
	macro: from `twittering-http-get-list-index-sentinel'.
	(twittering-http-get-list-index-sentinel): Use it.
	(twittering-http-get-list-subscriptions-sentinel): Ditto.
	(twittering-call-api): Add `get-list-subscriptions' description;
	Implement `get-list-subscriptions'.
	(twittering-get-list-subscriptions): New function.
	(twittering-get-list-sync): New function from
	`twittering-get-list-index-sync'.
	(twittering-get-list-index-sync): Rewrite to use it.
	(twittering-get-list-subscriptions-sync): New function. Use it.
	(twittering-read-timeline-spec-with-completion): New function.
	(twittering-other-user-list-interactive): Accept prefix to read
	other users' subscription list.

2011-03-15  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Support cancel of retweets posted by the
	authenticated user.
	(twittering-delete-status): cancel a retweet if it has been
	retweeted by the authenticated user.

	* twittering-mode.el: Explicitly use binary coding system on I/O
	of icon properties. Thanks to Naohiro Aota.
	(twittering-save-icon-properties): explicitly use binary coding
	system on writing icon properties.
	(twittering-load-icon-properties): likewise.

2011-02-19  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Disable the persistent icon storage if
	`jka-compr' is unavailable.
	(twittering-save-icon-properties): confirm that `jka-compr' is
	available.
	(twittering-load-icon-properties): likewise.
	(twittering-initialize-global-variables-if-necessary): disable
	the persistent icon storage if `jka-compr' is unavilable.

	* twittering-mode.el: Add `twittering-add-to-history' for
	Emacs21.
	(twittering-add-to-history): new function.
	(twittering-add-timeline-history): use
	`twittering-add-to-history'.

	* twittering-mode.el: Introduce the limit of number of
	icons being stored persistently.